--- a/estilos/style.css
+++ b/estilos/style.css
@@ -62,5 +62,43 @@ footer{
     display: flex;
     flex-direction: column;
     margin: 20px 20px;
-
 }
+
+body{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.grilla{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-areas: 
+    "header header header header"
+    "galeria galeria galeria galeria"
+    "footer footer footer footer";
+}
+
+.header{
+    grid-area: header;
+}
+
+.galeria-grid{
+    grid-area: galeria;
+}
+
+.footer{
+    grid-area: footer;
+}
+
+.padre{
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
+    gap: 15px;
+    justify-content: center;
+    height: 800px;
+}
+
+
